@@ -1,3 +1,9 @@
+2005-06-23  Albert Chu  <chu11@llnl.gov>
+
+	* Fixed slurm_state metric bugs.
+
+	* cerebro.spec.in: Updated for slurm_state metric.
+	
 2005-06-22  Albert Chu  <chu11@llnl.gov>
 
 	* Removed raw data metric.
